--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,27 @@ body {
   color: #333;
 }
 
+body::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f9f9f9;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #646566;
+  border-radius: 6px;
+  border: 3px solid #f9f9f9;
+  transition: background-color 0.3s ease-in-out;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #939596;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #e1e1e1;
+  border-radius: 6px;
+}
+
 h1,
 h2,
 h3,
